--- a/manifesto.html
+++ b/manifesto.html
@@ -1,12 +1,8 @@
 <html>
 <style>
-      @font-face { font-family: havelock; src: url('havelock.otf'); } 
-      h1 {
-         font-family: havelock
-      }
   .paragraph1 {
     font-size: 1vw;
-	font-family: havelock;
+	font-family: Times New Roman;
 	text-align: center;
 }
 </style>
@@ -94,13 +90,15 @@ a. Tidak percaya diri<br>
 b. Berat badan berlebih<br>
 c. Tabiat buruk<br>
 e. Kebiasaan merokok<br>
-d. Mudah sakit jika beban kerja berat(cuma ini yang belum di coba tapi ??????)<br>
+d. Mudah sakit jika beban kerja berat (cuma ini yang belum di coba tapi ??????)<br>
+<hr>
 Terkait dengan data latar belakang pendidikan anda:<br>
 a. Jurusan di sekolah menengah digunakan untuk menilai usaha yang perlu anda lakukan<br>
 c. Nilai rata-rata ijazah menilai potensi akademik<br>
 d. Nilai Fisika dipakai untuk menilai kemampuan anda belajar di prodi TK<br>
 e. Kelebihan non akademik untuk menilai kemampuan khusus anda<br>
-b. Kemampuan berolah raga akan mempengaruhi kemampuan akademik di prodi(bingung coy gada yang bener masa ini sih?)
+b. Kemampuan berolah raga akan mempengaruhi kemampuan akademik di prodi (bingung coy gada yang bener masa ini sih?)
+<hr>
 </h1>
 </body>
 </html>
