--- a/index.html
+++ b/index.html
@@ -1,202 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="favico.png" />
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-</head>
-<body
-style="background-color:#000000;">
-</body>  
-<head>
-<style>
-h1 {text-align: center;}
-@supports (-webkit-text-stroke: 1px white) {
-  h1 {
-    -webkit-text-stroke: 1px black;
-    -webkit-text-fill-color: white;
-  }
-}
-p {text-align: center;}
-@supports (-webkit-text-stroke: 1px white) {
-  p {
-    -webkit-text-stroke: 1px black;
-    -webkit-text-fill-color: white;
-  }
-}
-div {text-align: center;}
-@supports (-webkit-text-stroke: 1px white) {
-  div {
-    -webkit-text-stroke: 1px black;
-    -webkit-text-fill-color: white;
-  }
-}
-
-.box {
-  display:inline-block;
-  width:100%;
-  text-align:center;
-}
-.alignleft {
-text-align:center;
-}
-img {
-  display:inline-block;
-  max-width:100%;
-  margin:0 auto;
-  
-}
-
-@media only screen and (max-width: 767px) {
-    img {
-        width:100%;
-    }
-}
-
-.marquee {
-  height: 75px;
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-}
-
-
-/* would need to be adjusted depending on time */
-.marquee .marqueeone{
-  animation: marquee 25s linear infinite
-}
-
-.marquee .marqueetwo{
-  animation: marquee 25s linear 6.25s infinite 
-}
-
-.marquee .marqueethree{
-  animation: marquee 25s linear 12.55s infinite
-}
-
-.marquee .marqueefour{
-  animation: marquee 25s linear 18.75s infinite
-}
-
-/* even out the elements */
-.marquee div {
-  position: absolute;
-  width: 100%;
-  left: 100%;
-  height: 40px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.marquee:hover div {
-  animation-play-state: paused;
-}
-
-/* add delay at the end of animation so you dont start while another div is going */
-@keyframes marquee {
-  0% { left: 100%; }
-  50% { left: -100%; }
-  100% {left: -100%}
-}
-.marquee img { float: left; }
-
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <meta name="theme-color" content="#Ffd1dc">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:type" content="article">
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:locale:alternate" content="fr_FR">
+    <meta property="og:locale:alternate" content="es_ES">
+    <meta property="og:title" content="ReLyf's not so fun site">
+    <meta property="og:description" content="who needs description, it's literally a fun passion project or something">
+    <meta property="og:url" content="https://relyf47.github.io">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1148825138876383234/1153356823156502649/balls.png">
+    <link rel="shortcut icon" href="favico.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
+    <title>Welcome to ReLyf's shenanigans!</title>
 </head>
 <body>
-<title>Welcome to ReLyf's shinannigans!</title>
-<meta content="ReLyf's not so fun site" property="og:title" />
-<meta content="who needs description, its literally a fun passion project or something" property="og:description" />
-<meta content="https://relyf47.github.io" property="og:url" />
-<meta content="https://cdn.discordapp.com/attachments/1148825138876383234/1153356823156502649/balls.png" property="og:image" />
-<meta content="#Ffd1dc" data-react-helmet="true" name="theme-color" />
-<meta name="twitter:card" content="summary_large_image">
-<meta property="og:type" content="article" />
-<meta property="og:locale" content="en_GB" />
-<meta property="og:locale:alternate" content="fr_FR" />
-<meta property="og:locale:alternate" content="es_ES" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<h1 class="box">
-<img src="https://media.discordapp.net/attachments/1148825138876383234/1153715120875262022/cooltext443471749442843.gif"> <br>
-<img src="https://media.discordapp.net/attachments/1148825138876383234/1153715456075640943/cooltext443471841872118.png"> <br>
-<img src="https://media.discordapp.net/attachments/1148825138876383234/1153715861388005497/cooltext443471923879971.png"> <br>
-</h1>
-<div style="text-align:center">    
-  <a href="https://relyf47.github.io/subindex.html">More stuff that i do or something maybe idk probably </a>
-</div>
-</body>
-<div class="box">
-  <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif">
-</div>
-<div class="marquee">
-<a href="https://relyf47.github.io/myinfo.html">	
-	<div class="marqueeone"
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			</div>
-			<div class="marqueetwo"
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			</div>
-			<div class="marqueethree"
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			</div>
-			<div class="marqueefour"
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="220px"/>
-			</div>
-</div>
-
+    <header>
+        <h1>
+            <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715120875262022/cooltext443471749442843.gif" alt="Cool Text 1">
+            <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715456075640943/cooltext443471841872118.png" alt="Cool Text 2">
+            <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715861388005497/cooltext443471923879971.png" alt="Cool Text 3">
+        </h1>
+    </header>
+    <main>
+        <div class="center">
+            <a href="https://relyf47.github.io/subindex.html">More stuff that I do or something maybe, idk probably</a>
+        </div>
+        <div class="box">
+            <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" alt="Animation">
+        </div>
+        <div class="marquee">
+            <a href="https://relyf47.github.io/myinfo.html">
+                <div class="marquee-content">
+                    <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif" width="220" alt="Get to know me">
+                    <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif" width="220" alt="Get to know me">
+                    <!-- Repeat as necessary -->
+                </div>
+            </a>
+        </div>
+    </main>
 </body>
 </html>
