--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="ReLyf's not so fun site">
     <meta property="og:description" content="who needs description, it's literally a fun passion project or something">
     <meta property="og:url" content="https://relyf47.github.io">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1148825138876383234/1153356823156502649/balls.png">
+    <meta property="og:image" content="https://relyf47.github.io/balls.webp">
     <link rel="shortcut icon" href="favico.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Welcome to ReLyf's shenanigans!</title>
@@ -23,9 +23,9 @@
 <body>
     <header>
         <h1>
-            <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715120875262022/cooltext443471749442843.gif" alt="Cool Text 1">
-            <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715456075640943/cooltext443471841872118.png" alt="Cool Text 2">
-            <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715861388005497/cooltext443471923879971.png" alt="Cool Text 3">
+            <img src="https://relyf47.github.io/Text1.gif" alt="Cool Text 1">
+            <img src="https://relyf47.github.io/Text2.webp" alt="Cool Text 2">
+            <img src="https://relyf47.github.io/Text3.webp" alt="Cool Text 3">
         </h1>
     </header>
     <main>
@@ -38,8 +38,8 @@
         <div class="marquee">
             <a href="https://relyf47.github.io/myinfo.html">
                 <div class="marquee-content">
-                    <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif" width="220" alt="Get to know me">
-                    <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
                     <!-- Repeat as necessary -->
                 </div>
             </a>
