--- a/subindex.html
+++ b/subindex.html
@@ -1,41 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <link rel="shortcut icon" type="image/x-icon" href="favico.png" />
-  <title> Welcome to actual content. </title>
+<html lang="en">
 <head>
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
-<meta name="viewport" content="width=1000, initial-scale=1.0, maximum-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title>Welcome to actual content</title>
+    <link rel="shortcut icon" href="favico.png" type="image/x-icon">
+    <link rel="stylesheet" href="substyles.css">
 </head>
-<style>
-      @font-face { font-family: havelock; src: url('havelock.otf'); } 
-      h1 {
-         font-family: havelock
-      }
-  .paragraph1 {
-    font-size: 2vw;
-	font-family: havelock;
-	text-align: center;
-  }
-  .paragraph2 {
-    font-size: 1vw;
-	font-face: havelock;
-	text-align: center;
-	
-  }
-</style>
 <body>
-<h1 class="paragraph1">
-Hello welcome to the subindex page <br> here you can find stuff that i've worked on</h1>
-<h1 class="paragraph2">
-(like blog post and stuff)</h1>
-<div class="paragraph1" style="text-align:center">
-<a href="https://relyf47.github.io/blog.html">The blogs that i've wrote</a>
-</div>
-
-<div style="text-align:center">    
-  <a href="https://relyf47.github.io/index.html">Take me back</a>
-</div>
+    <header>
+        <h1 class="paragraph1">Hello welcome to the subindex page <br> here you can find stuff that I've worked on</h1>
+        <h2 class="paragraph2">(like blog posts and stuff)</h2>
+    </header>
+    <main>
+        <div class="paragraph1">
+            <a href="https://relyf47.github.io/blog/blog.html">The blogs that I've written</a>
+        </div>
+        <div class="paragraph1">
+            <a href="https://relyf47.github.io/index.html">Take me back</a>
+        </div>
+    </main>
 </body>
 </html>
