--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                 <div class="marquee-content">
                     <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
                     <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
                     <!-- Repeat as necessary -->
                 </div>
             </a>
