--- a/myinfo.html
+++ b/myinfo.html
@@ -39,7 +39,7 @@ My Info! </h1>
 <h2 style="text-align:center">
 [[[REDACTED]]]
 <div class="box">
-  <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153734062545059840/rickroll-roll.gif">
+  <img src="https://relyf47.github.io/myinfo/rocky.gif">
 </div>
 </h2>
 <h1 style="text-align:center">
