--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
                     <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
                     <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
                     <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+					<img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+					<img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+					<img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
                     <!-- Repeat as necessary -->
                 </div>
             </a>
