--- a/index.html
+++ b/index.html
@@ -12,60 +12,17 @@
     <meta property="og:locale" content="en_GB">
     <meta property="og:locale:alternate" content="fr_FR">
     <meta property="og:locale:alternate" content="es_ES">
-    <meta property="og:title" content="ReLyf's not so fun site">
-    <meta property="og:description" content="who needs description, it's literally a fun passion project or something">
+    <meta property="og:title" content="ReLyf's personal page">
+    <meta property="og:description" content="cry over it">
     <meta property="og:url" content="https://relyf47.github.io">
     <meta property="og:image" content="https://relyf47.github.io/balls.webp">
-    <link rel="shortcut icon" href="favico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favico.gif" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
-    <title>Welcome to ReLyf's shenanigans!</title>
+    <title>Welcome to ReLyf's biography!</title>
 </head>
 <body>
-    <header>
-        <h1>
-            <img src="https://relyf47.github.io/Text1.gif" alt="Cool Text 1">
-            <img src="https://relyf47.github.io/Text2.webp" alt="Cool Text 2">
-            <img src="https://relyf47.github.io/Text3.webp" alt="Cool Text 3">
-        </h1>
-    </header>
-    <main>
         <div class="center">
-            <a href="https://relyf47.github.io/subindex.html">More stuff that I do or something maybe, idk probably</a>
-        </div>
-        <div class="box">
-            <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" alt="Animation">
-        </div>
-        <div class="marquee">
-            <a href="https://relyf47.github.io/myinfo.html">
-                <div class="marquee-content">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-					<img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-					<img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-					<img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <!-- Repeat as necessary -->
-                </div>
-            </a>
-        </div>
-    </main>
+			<h1>Soon</h1>
+            <a href="https://relyf47.github.io/funindex.html">Fun mode</a>
 </body>
 </html>
