--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     <title>Welcome to ReLyf's biography!</title>
 </head>
 <body>
-        <div class="center">
-			<h1>Soon</h1>
-            <a href="https://relyf47.github.io/funindex.html">Fun mode</a>
+    <div class="center">
+        <h1>Soon</h1>
+    </div>
+    <a href="https://relyf47.github.io/funindex.html" class="bottom-right-icon">
+        <img src="favico.png" alt="Icon">
+    </a>
 </body>
 </html>
