--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
 </head>
 <body>
     <div class="center">
-        <h1>Soon</h1>
+        <h1 id="main-title">ReLyf</h1>
     </div>
+
+    <div class="content">
+        <h2 id="fade-in-text" class="hidden">ReLyf's biography</h2>
+    </div>
+
     <a href="https://relyf47.github.io/funindex.html" class="bottom-right-icon">
         <img src="favico.png" alt="Icon">
     </a>
+
+    <script src="script.js"></script>
 </body>
 </html>
