--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,13 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <link rel="shortcut icon" href="../favico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="resources/favico.png" type="image/x-icon">
     <title>Re'sBlog</title>
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
     <div class="card2">
-        <h2><img src="https://relyf47.github.io/blog/header.webp" alt="Header Image"></h2>
+        <h2><img src="resources/header.webp" alt="Header Image"></h2>
     </div>
 
     <div class="row">
@@ -21,7 +21,7 @@
                 <h2>Kemacetan di Indonesia</h2>
                 <h5 style="text-align:center">Sebuah ide untuk mengatasi kemacetan di Indonesia, 18 September 2023</h5>
                 <div class="box">
-                    <img src="https://relyf47.github.io/blog/iu.webp" alt="Image">
+                    <img src="resources/iu.webp" alt="Image">
                 </div>
                 <p class="card3">
                     Dengan kemacetan di Indonesia yang makin menjadi saya mencari beberapa cara untuk memperlancar kemacetan tersebut.
@@ -41,7 +41,7 @@
     </div>
 
     <div class="footer">
-        <a href="../index.html">Take me back</a>
+        <a href="index.html">Take me back</a>
     </div>
 </body>
 </html>
