--- a/funindex.html
+++ b/funindex.html
@@ -13,19 +13,22 @@
     <meta property="og:locale:alternate" content="fr_FR">
     <meta property="og:locale:alternate" content="es_ES">
     <meta property="og:title" content="ReLyf's not so fun site">
-    <meta property="og:description" content="who needs description, it's literally a fun passion project or something">
+    <meta property="og:description" content="welcome to hell">
     <meta property="og:url" content="https://relyf47.github.io">
-    <meta property="og:image" content="https://relyf47.github.io/balls.webp">
-    <link rel="shortcut icon" href="favico.png" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
+    <meta property="og:image" content="resources/balls.webp">
+    <link rel="shortcut icon" href="resources/favico.png" type="image/x-icon">
+    <link rel="stylesheet" href="funstyles.css">
     <title>Welcome to ReLyf's shenanigans!</title>
 </head>
 <body>
     <header>
         <h1>
-            <img src="https://relyf47.github.io/Text1.gif" alt="Cool Text 1">
-            <img src="https://relyf47.github.io/Text2.webp" alt="Cool Text 2">
-            <img src="https://relyf47.github.io/Text3.webp" alt="Cool Text 3">
+            <img src="resources/Text1.gif" alt="Cool Text 1">
+			<br>
+            <img src="resources/Text2.webp" alt="Cool Text 2">
+			<br>
+            <img src="resources/Text3.webp" alt="Cool Text 3">
+			<br>
         </h1>
     </header>
     <main>
