--- a/myinfo.html
+++ b/myinfo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link rel="shortcut icon" type="image/x-icon" href="favico.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="resources/favico.png" />
   <title> I was gonna put the rickroll song but it doesnt work anymore </title>
 <style>
 .box {
@@ -39,14 +39,14 @@ My Info! </h1>
 <h2 style="text-align:center">
 [[[REDACTED]]]
 <div class="box">
-  <img src="https://relyf47.github.io/myinfo/rocky.gif">
+  <img src="resources/rocky.gif">
 </div>
 </h2>
 <h1 style="text-align:center">
 oh btw before you leave listen to my favourite studying song </h1>
   <div class="audio-container">
     <audio controls>
-      <source src="https://relyf47.github.io/main.ogg" type="audio/mpeg"/>
+      <source src="resources/main.ogg" type="audio/mpeg"/>
     </audio>
   </div>
 <div style="text-align:center">    
