--- a/subindex.html
+++ b/subindex.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Welcome to actual content</title>
+    <title>Welcome to something idk</title>
     <link rel="shortcut icon" href="favico.png" type="image/x-icon">
     <link rel="stylesheet" href="substyles.css">
 </head>
@@ -17,7 +17,7 @@
     </header>
     <main>
         <div class="paragraph1">
-            <a href="https://relyf47.github.io/blog/blog.html">The blogs that I've written</a>
+            <a href="https://relyf47.github.io/blog.html">The blogs that I've written</a>
         </div>
         <div class="paragraph1">
             <a href="https://relyf47.github.io/index.html">Take me back</a>
