--- a/funindex.html
+++ b/funindex.html
@@ -41,30 +41,30 @@
         <div class="marquee">
             <a href="https://relyf47.github.io/myinfo.html">
                 <div class="marquee-content">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-					<img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-					<img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-					<img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
-                    <img src="https://relyf47.github.io/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+					<img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+					<img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+					<img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
+                    <img src="resources/Know.gif" width="220" alt="Get to know me">
                     <!-- Repeat as necessary -->
                 </div>
             </a>
