--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
     <title>Welcome to ReLyf's biography!</title>
 </head>
 <body>	
-<script src="script.js"></script>
-<div id="blob"></div>
-<div id="blur"></div>
     <div class="center">
-        <h1 data-value="ReLyf">ReLyf</h1>
-        <p>Welcome to my microblog site</p>
+        <h1>ReLyf</h1>
+        <p><br>Welcome to my microblog site</p>
     </div>
 	<br><br><br>
 		<ul id="menu-icons-menu" class="menu">
@@ -119,17 +116,12 @@
 		<br>
 		
 		<div class="ipost">
-		<h1><img src="https://github-readme-stats.vercel.app/api/top-langs/?username=relyf47&theme=vue-dark&show_icons=true&hide_border=true&layout=compact" alt="relyf47's Top Languages"></h1>
+		<a><img src="https://github-readme-stats.vercel.app/api/top-langs/?username=relyf47&theme=vue-dark&show_icons=true&hide_border=true&layout=compact" alt="relyf47's Top Languages"></a>
+		<a href="https://malsignature.com"><img src="https://malsignature.com/?/view?username=ReLyf&style=normal"></a>
 		</div>
 		<div class="ipost">
-		<h1><a href="https://malsignature.com"><img src="https://malsignature.com/?/view?username=ReLyf&style=normal"></a></h1>
-		</div>
+			</div>
 		<br>
-		<div class="tpost">
-		<h1><br></h1>
-		</div>
-		<br>
-		
     <a href="https://relyf47.github.io/funindex.html" class="bottom-right-icon">
         <img src="resources/favico.png" alt="Icon">
     </a>
