--- a/subindex.html
+++ b/subindex.html
@@ -20,6 +20,9 @@
             <a href="https://relyf47.github.io/blog.html">The blogs that I've written</a>
         </div>
         <div class="paragraph1">
+            <a href="https://relyf47.github.io/mosaic.html">Testing stuff</a>
+        </div>
+        <div class="paragraph1">
             <a href="https://relyf47.github.io/index.html">Take me back</a>
         </div>
     </main>
